client/src/dashboard/styles/components/_accordion.scss
.kpi-definitions {
  display: flex;

  @media screen and (max-width: 768px){
    display: block;
    clear:both;
  }

  .user-satisfaction {
    border-bottom: solid 2px $user-satisfaction-colour;
  }

  .cost-per-transaction {
    border-bottom: solid 2px $cost-per-transaction-colour;
  }

  .digital-take-up {
    border-bottom: solid 2px $digital-take-up-colour;
  }

  .completion-rate {
    border-bottom: solid 2px $completion-rate-colour;
  }

  p {
    padding-top: 22px;
  }

  h3 {
    font-weight: 700;
    font-size: 1rem;
  }

  .aus-width-one-fourth {
    margin-top: 25px;
  }
}

.show-more {
  text-align: center;
  margin-top: 8px;

  @media screen and (max-width: 768px){
    margin-top: 15px;
    margin-bottom: 15px;
  }

  .show-more__button {
    font-weight: bold;
    color: #0579C7;
    text-decoration: underline;
    font-size: 1rem;
    background: transparent;
    border: none;
  }
}

@media screen and (min-width: 768px){
  .dashboard__kpis {
    .sparkline__inner.no-data{
      height: 123px;
    }
  }
}

.kpis-no-data-true {
  .sparkline__inner.no-data {
    height: 50px;
  }
}

